--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  color: white;
+  background-image: url("https://img.freepik.com/premium-vector/restaurant-mural-wallpaper_23-2148685950.jpg?w=2000");
 }
 
 .App-logo {
