--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: url("https://img.freepik.com/premium-vector/restaurant-mural-wallpaper_23-2148685950.jpg?w=2000");
 }
 
 code {
