--- a/client/src/styles/card.module.css
+++ b/client/src/styles/card.module.css
@@ -1,18 +1,18 @@
 .ccontainer {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 15px
+    /* border: solid; */
 }
 
 .witdh {
     width: 420px;
     height: 420px;
-    border: solid;
+    margin: 5px;
+    border: 3px solid orangered;
     border-radius: 20px;
     background-color: white;
-    opacity: 90%
+    opacity: 95%;
 }
 
 .text {
